--- a/hackathon.html
+++ b/hackathon.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">hey</a></li>
+        <li><a href="#">Contact us</a></li>
         
       </ul>
       
@@ -46,10 +46,137 @@
 
 <div class="jumbotron">
   <div class="container">
-  	<h1>hello, world!</h1>
-    <p>we welcome you to our doctor assistant webpage</p>
+  	<h1>Dental Care</h1>
+    <p>We welcome you to our dental care page</p>
   </div>
 </div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+			    <h3 class="panel-title">Endodontics</h3>
+				</div>
+				<div class="panel-body">
+			    	Diagnosis, prevention, and treatment of diseases and injuries of the dental pulp and tissues surrounding the tooth root.
+				</div>
+			</div>
+		</div>
+
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Operative Dentistry</h3>
+			  </div>
+			  <div class="panel-body">
+			    Diagnosis, prevention and minimally-invasive treatment of decay. Conservative correction of esthetic problems with dental bonding.
+			  </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+			    <h3 class="panel-title">Family Dentistry</h3>
+			  </div>
+			  <div class="panel-body">
+			    Diagnosis, prevention, and treatment of diseases and injuries of the dental pulp and tissues surrounding the tooth root
+			  </div>
+			</div>
+		</div>
+
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Oral & Maxillofacial Surgery</h3>
+			  </div>
+			  <div class="panel-body">
+			    Grafting, dental implant placement and other surgical treatments of conditions, injuries, and esthetics of the teeth, jaws, and face
+			  </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+			    <h3 class="panel-title">Oral Pathology, Radiology & Medicine</h3>
+			  </div>
+			  <div class="panel-body">
+			    Investigation of clinical, radiographic, and microscopic features of oral / maxillofacial diseases and abnormalities
+			  </div>
+			</div>
+		</div>
+
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Orthodontics</h3>
+			  </div>
+			  <div class="panel-body">
+			    Correction of irregularities of the teeth, bite, and jaw
+			  </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+			    <h3 class="panel-title">Peadiatric Dentist</h3>
+			  </div>
+			  <div class="panel-body">
+			    Oral health care for infants, children, and adolescents, including persons with special health care needs.
+			  </div>
+			</div>
+		</div>
+
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Periodontics</h3>
+			  </div>
+			  <div class="panel-body">
+			  	Treatment of the supporting dental structures, including gums and alveolar bone, and their replacements by grafting or implants.
+			  </div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+			    <h3 class="panel-title">Preventive & community Dentistry</h3>
+			  </div>
+			  <div class="panel-body">
+			    Improvement of the public's oral health through prevention and control of oral diseases.
+			  </div>
+			</div>
+		</div>
+
+		<div class="col-lg-6">
+			<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Prosthodontics</h3>
+			  </div>
+			  <div class="panel-body">
+			  	Complete oral rehabilitation, including the use of dentures, crowns, bridges, veneers, & implants.
+			  </div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+
 
 
 
